--- a/po/et.po
+++ b/po/et.po
@@ -4,7 +4,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-12-03 15:00+0000\n"
 "PO-Revision-Date: \n"
-"Last-Translator: \n"
+"Last-Translator: Andy Blackburn <andyblac@o2.co.uk>\n"
 "Language-Team: Raivo, Henkka, eesatfan, rimas\n"
 "Language: et\n"
 "MIME-Version: 1.0\n"
@@ -9657,480 +9657,3 @@ msgstr "kanalivahetus"
 msgid "zapped"
 msgstr "vahetatud"
 
-#~ msgid "%d Mb"
-#~ msgstr "%d Mb"
-
-#~ msgid "* = Restart timeshift required"
-#~ msgstr "* = Taaskäivita ajanihe"
-
-#~ msgid "2nd Infobar timeout"
-#~ msgstr "Teise inforiba kestus"
-
-#~ msgid "2nd infobar"
-#~ msgstr "Teine inforiba"
-
-#~ msgid "A/V Settings"
-#~ msgstr "Heli ja pildi seaded"
-
-#~ msgid "AC3 downmix"
-#~ msgstr "AC3 > stereo"
-
-#~ msgid "Add Bookmark"
-#~ msgstr "Lisa lemmik"
-
-#, fuzzy
-#~ msgid "Advanced pptions"
-#~ msgstr "Lisavalikud"
-
-#~ msgid "Altern"
-#~ msgstr "Altern"
-
-#~ msgid "Aspect Ratio"
-#~ msgstr "Kuvasuhe"
-
-#~ msgid "Automatic configuration is finished"
-#~ msgstr "Automaatne seadistamine on tehtud"
-
-#~ msgid "Change this value if your smartcard can't doesn't handle off-line decoding well; default is '1000'."
-#~ msgstr "Muuda seda väärtust, kui vaatajakaardil on probleeme võrguta dekodeerimisel. Vaikeväärtus on '1000'."
-
-#~ msgid "Channel 1 at Start"
-#~ msgstr "Käivita kanalil 1"
-
-#~ msgid "Choose Tuner"
-#~ msgstr "Vali tuuner"
-
-#~ msgid "Choose a wireless network"
-#~ msgstr "Vali WiFi võrk"
-
-#~ msgid "Choose bouquet"
-#~ msgstr "Vali lemmiknimekiri"
-
-#~ msgid "Choose target folder"
-#~ msgstr "Vali sihtkataloog"
-
-#~ msgid "Choose the amount of time that will be presented."
-#~ msgstr "Vali aeg, mille vältel seda esitatakse."
-
-#~ msgid "Choose upgrade source"
-#~ msgstr "Vali uuenduste allikas"
-
-#~ msgid "Choose whether to control the A/V input of your TV with the scart connection."
-#~ msgstr "Otsusta, kas juhtida teleri A/V sisendit scart ühendusega."
-
-#~ msgid "Choose whether to show the channel names, picons, or both in the EPG."
-#~ msgstr "Vali, kas saatekavas näidatakse kanalinimesi, kanalilogosi või mõlemaid."
-
-#~ msgid "Choose your Skin"
-#~ msgstr "Vali uus välimus"
-
-#~ msgid "CommonInterface"
-#~ msgstr "CI liides"
-
-#~ msgid "Configure the offline decode delay in ms"
-#~ msgstr "Määra võrguta dekodeerimise viiteaeg (ms)"
-
-#~ msgid "Correct"
-#~ msgstr "Õige"
-
-#~ msgid "Create Directory"
-#~ msgstr "Loo kataloog"
-
-#~ msgid "Create movie directory"
-#~ msgstr "Loo salvestuskataloog"
-
-#~ msgid "DTS downmix"
-#~ msgstr "DTS > stereo"
-
-#~ msgid "Display message before next played movie"
-#~ msgstr "Teavita enne järgmist filmi"
-
-#~ msgid "Do you want a pop-up message saying 'a recording has started'?"
-#~ msgstr "Kas soovid näha hüpikakent, mis teavitab salvestuse algamisest?"
-
-#~ msgid "Do you want to install a channel list?"
-#~ msgstr "Kas paigaldad kanalinimekirja?"
-
-#~ msgid "Download .NFI-Files for USB-Flasher"
-#~ msgstr "Laadi alla .NFI-failid USB-le"
-
-#, fuzzy
-#~ msgid "Download .NFI-Files for USB-flasher"
-#~ msgstr "Laadi alla .NFI-failid USB-le"
-
-#~ msgid "Download Plugins"
-#~ msgstr "Paigalda laiendusi"
-
-#~ msgid "EPG Setup"
-#~ msgstr "EPG seadistus"
-
-#~ msgid "Edit Title"
-#~ msgstr "Muuda pealkirja"
-
-#~ msgid "Enable and set the duration of the second infobar (press OK twice) that may include more information on the current service."
-#~ msgstr "Luba teise inforiba näitamine (2 X OK). Seal võib leida käesoleva kanali kohta rohkem teavet."
-
-#~ msgid "Enables EPG data of events in the past to be displayed. Handy when you want to know something about an event that is about to finish or has just finished (minutes)."
-#~ msgstr "Lubatakse möödunud saate andmete kuvamine. Mugav juhul, kui soovid midagi teada saatest, mis on kohe lõppemas või on just lõppenud. (min)"
-
-#~ msgid "EndTime"
-#~ msgstr "Lõpp aeg"
-
-#~ msgid ""
-#~ "Enigma2 Skinselector\n"
-#~ "\n"
-#~ "If you experience any problems please contact\n"
-#~ "stephan@reichholf.net\n"
-#~ "\n"
-#~ "© 2006 - Stephan Reichholf"
-#~ msgstr ""
-#~ "Enigma2 välimuse valija\n"
-#~ "\n"
-#~ "Kui on probleeme, kontakteeru\n"
-#~ "stephan@reichholf.net\n"
-#~ "\n"
-#~ "© 2006 - Stephan Reichholf"
-
-#~ msgid "Event Fontsize"
-#~ msgstr "Saate nime tähesuurus"
-
-#~ msgid "Fan %d PWM"
-#~ msgstr "Ventilaatori %d PWM"
-
-#~ msgid "Fan %d voltage"
-#~ msgstr "Ventilaatori %d pinge"
-
-#~ msgid "Fast Forward speeds"
-#~ msgstr "Edasikerimise kiirused"
-
-#~ msgid "Found %d position(s) of %d total"
-#~ msgstr "Leiti %d asukohta %d -st"
-
-#~ msgid "General AC3 delay (ms)"
-#~ msgstr "Üldine AC3 viide (ms)"
-
-#~ msgid "General PCM delay (ms)"
-#~ msgstr "Üldine PCM viide (ms)"
-
-#~ msgid "Guard Interval"
-#~ msgstr "Kaitsevahemik"
-
-#~ msgid "Here you can select the behaviour of the 'puase'-button when playback has been paused."
-#~ msgstr "Siin saab määrata 'paus' nupu käitumise taasesituse peatamisel"
-
-#~ msgid "If set to 'Yes' recordings will be deleted to a trashcan. That way thay can still be played."
-#~ msgstr "Määtates 'jah', liigutatakse kustutatud salvestused prügikasti. Sealt saab neid veel vaadata."
-
-#~ msgid "If set to 'yes' the bouquets will be shown each time you open the EPG"
-#~ msgstr "Määrates 'jah', näidatakse saatekava avamisel alati lemmiknimekirju"
-
-#~ msgid "If set to 'yes' the receiver will use the audio stream that has been used earlier."
-#~ msgstr "Määrates 'jah', kasutab vastuvõtja varem kasutatud heliriba."
-
-#~ msgid "Info Button (long)"
-#~ msgstr "INFO (pikk)"
-
-#~ msgid "Info Button (short)"
-#~ msgstr "INFO (lühike)"
-
-#~ msgid "Initial Fast Forward speed"
-#~ msgstr "Algne edasikerimise kiirus"
-
-#~ msgid "Initial Rewind speed"
-#~ msgstr "Algne tagasikerimise kiirus"
-
-#~ msgid "Items in trashcan will be deleted if less then the set space is available."
-#~ msgstr "Prügikast tühjendatakse, kui ruumi on jäänud lubatust vähem."
-
-#~ msgid "Job task(s) are in progress!"
-#~ msgstr "Ülesande täitmine!"
-
-#~ msgid "Keep old timers for how many days"
-#~ msgstr "Aegunud taimerite säilitamise aeg (päevad)"
-
-#~ msgid "Kill partition table"
-#~ msgstr "Kõrvalda partitsioonitabel"
-
-#~ msgid "Letzeburgesch"
-#~ msgstr "Letseburgi"
-
-#~ msgid "Limited character set for recording filenames"
-#~ msgstr "Piiratud märgistik salvestatavatele failinimedele"
-
-#~ msgid "Main Menu"
-#~ msgstr "Peamenüü"
-
-#~ msgid "Margin after record"
-#~ msgstr "Salvestuse lõppu lisatakse"
-
-#~ msgid "MediaPlayer"
-#~ msgstr "Meediamängija"
-
-#~ msgid "NetworkWizard"
-#~ msgstr "Võrgu abimees"
-
-#~ msgid "OK Button (long)"
-#~ msgstr "OK (pikk)"
-
-#~ msgid "OK Button (short)"
-#~ msgstr "OK (lühike)"
-
-#~ msgid "OSD Position Setup"
-#~ msgstr "Ekraanigraafika asukoht"
-
-#~ msgid "OSD Settings"
-#~ msgstr "Ekraanigraafika seaded"
-
-#~ msgid "OSD visibility"
-#~ msgstr "Ekraanigraafika nähtavus"
-
-#~ msgid "On reaching the end of a file during playback, you can choose the box's behaviour."
-#~ msgstr "Siin saab määrata vastuvõtja käitumise taasesituse lõppemisel."
-
-#~ msgid "On starting playback of a file, you can choose the box's behaviour."
-#~ msgstr "Siin saab määrata vastuvõtja käitumise taasesituse algamisel."
-
-#~ msgid "On stopping playback of a file, you can choose the box's behaviour."
-#~ msgstr "Siin saab määrata vastuvõtja käitumise taasesituse peatamisel."
-
-#~ msgid "Only change for debugging; default is '20 MB/s'."
-#~ msgstr "Muuda ainult silumiseks; vaikimisi '20 MB/s'."
-
-#~ msgid "Only change for debugging; default is 'Internal hdd only'."
-#~ msgstr "Muuda ainult silumiseks; vaikimisi 'ainiult sisesel kõvakettal'."
-
-#~ msgid "Orbital Position"
-#~ msgstr "Orbitaalpositsioon"
-
-#~ msgid "Permanent Timeshift Enable"
-#~ msgstr "Luba pidev ajanihe"
-
-#~ msgid "Permanent Timeshift Max Events"
-#~ msgstr "Pideva ajenihke suurim saadete arv"
-
-#~ msgid "Permanent Timeshift Max Length"
-#~ msgstr "Pideva ajanihke suurim pikkus"
-
-#~ msgid "Permanent Timeshift Start Delay"
-#~ msgstr "Viiteaeg pideva ajanihke käivitumisel"
-
-#~ msgid "Picture in Graphics"
-#~ msgstr "PiG (mini-TV nimekirjas)"
-
-#~ msgid "Progress Small"
-#~ msgstr "Väike edenemisriba"
-
-#~ msgid "QuickEPG mode"
-#~ msgstr "QuickEPG"
-
-#~ msgid "Remember these settings for each folder"
-#~ msgstr "Pea iga kataloogi seadistused meeles"
-
-#~ msgid "Remove Bookmark"
-#~ msgstr "Eemalda tähis"
-
-#~ msgid "Remove Plugins"
-#~ msgstr "Eemalda laiendusi"
-
-#~ msgid "Remove items from trash after (days)"
-#~ msgstr "Salvestuste prügikastis säilitamise aeg (päevad)"
-
-#~ msgid "Rolloff"
-#~ msgstr "Rolloff"
-
-#~ msgid "Sat / Dish Setup"
-#~ msgstr "Antenni seaded"
-
-#~ msgid "Save Playlist"
-#~ msgstr "Salvesta esitusloend"
-
-#~ msgid "Select 'Yes' if you want only a small number of characters to be used for recording names."
-#~ msgstr "Määra 'jah', kui soovid, et salvestuste nimed oleks väga lühikesed."
-
-#~ msgid "Select 'Yes' if you want recordings to have priority over live-TV."
-#~ msgstr "Määra 'jah', kui soovid, et salvestustel on otsesaadete suhtes eelistus."
-
-#~ msgid "Select how you want recording names to be populated."
-#~ msgstr "Vali, millisel kujul salvestuste nimed luuakse."
-
-#~ msgid "Select the number of days after which the box is allowed to permanently delete recordings (from the trashcan)."
-#~ msgstr "Määra päevade arv, pärast mida kustutatakse salvestused (prügikastist) lõplikult."
-
-#~ msgid "Service Fontsize"
-#~ msgstr "Kanali nime tähesuurus"
-
-#~ msgid "Service Scan"
-#~ msgstr "Kanaliotsing"
-
-#~ msgid "Services may be grouped in bouquets. When enabled you can zap to a channel in another bouquet then you are in at present."
-#~ msgstr "Kanalid saab rühmitada lemmiknimekirjadesse. Kui see valik on lubatud, saad liikuda kanalile, mis asub teises lemmiknimekirjas kui see, milles oled praegu."
-
-#~ msgid "Set the initial fast forward speed."
-#~ msgstr "Määra edasikerimise kiirus."
-
-#~ msgid "Set the initial rewind speed."
-#~ msgstr "Määra tagasikerimise kiirus."
-
-#~ msgid "Set the number of days you want old timers to be kept."
-#~ msgstr "Määra päevade arv kuni vanu taimereid hoitakse."
-
-#~ msgid "Set the skip-forward/backward time of the 1-3 number keys."
-#~ msgstr "Määra edasi-tagasi hüppe pikkus '1' ja '3' nuppudele."
-
-#~ msgid "Set the skip-forward/backward time of the 4-6 number keys."
-#~ msgstr "Määra edasi-tagasi hüppe pikkus '4' ja '6' nuppudele."
-
-#~ msgid "Set the skip-forward/backward time of the 7-9 number keys."
-#~ msgstr "Määra edasi-tagasi hüppe pikkus '7' ja '9' nuppudele."
-
-#~ msgid "Set the time to hide the second infobar. The bar also disappears on pressing 'OK'."
-#~ msgstr "Määra aeg teise inforiba peitmiseks. Riba kaob ka vajutades 'OK'."
-
-#~ msgid "Set the time you want recordings to start before the event start-time."
-#~ msgstr "Määra, mitu minutit enne saate algamist alustatakse salvestamist."
-
-#~ msgid "Set the time you want recordings to stop after the event stop-time."
-#~ msgstr "Määra, mitu minutit peale saate lõppu salvestmine lõpetatakse."
-
-#~ msgid "Set the value for the initial fast-backward speed."
-#~ msgstr "Määra algsed tagasikerimise kiirused."
-
-#~ msgid "Set the value for the initial fast-forward speed."
-#~ msgstr "Määra algsed edasikerimise kiirused."
-
-#~ msgid "Set the values for fast-backward speeds."
-#~ msgstr "Määra tagasikerimise kiirused."
-
-#~ msgid "Set the values for fast-forward speeds."
-#~ msgstr "Määra edasikerimise kiirused."
-
-#~ msgid "Set the values for slow-motion speeds."
-#~ msgstr "Määra aeg-luubis kiirused."
-
-#~ msgid "Set the width allocated to the picon."
-#~ msgstr "Laius määratakse kanalilogo järgi"
-
-#~ msgid "Set the width allocated to the service name."
-#~ msgstr "Laius määratakse kanali nime järgi"
-
-#~ msgid "Show Message when Recording starts"
-#~ msgstr "Teavita salvestuse algamisest"
-
-#~ msgid "Show a popup message after a recording has finished and before start next in queue."
-#~ msgstr "Näita teavitust pärast salvestuse lõppemist ja enne järjekorras järgmisie algamist."
-
-#~ msgid "Show status icons in Movielist"
-#~ msgstr "Oleku tähistus filmilistis"
-
-#~ msgid "Skip Empty Services"
-#~ msgstr "Jäta tühjad kanalid vahele"
-
-#~ msgid "Sleep timer"
-#~ msgstr "Unetaimer"
-
-#~ msgid "Slow Motion speeds"
-#~ msgstr "Aeglustuskiirused"
-
-#~ msgid "Sort List by"
-#~ msgstr "Järjestuse aluseks"
-
-#~ msgid "Standby fan %d PWM"
-#~ msgstr "Ventilaatori %d PWM ooterežiimil"
-
-#~ msgid "Standby fan %d voltage"
-#~ msgstr "Ventilaatori %d pinge ooterežiimil"
-
-#~ msgid "Symbol Rate"
-#~ msgstr "Sümbolikiirus"
-
-#~ msgid "Symbolrate"
-#~ msgstr "Sümbolikiirus"
-
-#, fuzzy
-#~ msgid "TV system"
-#~ msgstr "TV süsteem"
-
-#~ msgid "Temperature and fan control"
-#~ msgstr "Temp. ja ventilaatori kontroll"
-
-#~ msgid "Test-Messagebox?"
-#~ msgstr "Testsõnum?"
-
-#~ msgid "This option configures the screen aspect ratio."
-#~ msgstr "See valik määrab ekraani kuvasuhte."
-
-#~ msgid "This option configures the screen refresh rate."
-#~ msgstr "See valik määrab ekraani värskendussageduse."
-
-#~ msgid "Time Scale"
-#~ msgstr "Ajavahemik"
-
-#~ msgid "Timeline Fontsize"
-#~ msgstr "Ajakava tähesuurus"
-
-#~ msgid "Timeshift-Save Action on zap"
-#~ msgstr "Ajanihke salvestamine kanalivahetusel"
-
-#~ msgid "Transmission Mode"
-#~ msgstr "Edastamise moodus"
-
-#~ msgid "Try to find used Transponders in cable network.. please wait..."
-#~ msgstr "Otsin kaabelvõrgu sagedusi.Oota..."
-
-#~ msgid "Use Interface"
-#~ msgstr "Kasuta võrguliidest"
-
-#~ msgid "Use PTS seekbar while timeshifting? *"
-#~ msgstr "Näita ajanihke ajal PTS otsiriba? *"
-
-#~ msgid "Use trashcan in movielist"
-#~ msgstr "Kasuta filmilistis prügikasti"
-
-#~ msgid "Videoenhancement Setup"
-#~ msgstr "Pildiparanduse sätted"
-
-#, fuzzy
-#~ msgid "When finished:"
-#~ msgstr "Eemaldatud."
-
-#~ msgid "When using scart connection, choose what color format to use."
-#~ msgstr "Määra, millist värvivormingut kasutada scart ühendusega."
-
-#~ msgid "Wrong"
-#~ msgstr "Vale"
-
-#~ msgid "Your STB_BOX isn't connected to the internet properly. Please check it and try again."
-#~ msgstr "STB_BOX ei ole ühendatud internetti. Kontrolli võrguseadeid ja ürita uuesti."
-
-#~ msgid "jump to listbegin"
-#~ msgstr "mine nimekirja algusse"
-
-#~ msgid "jump to listend"
-#~ msgstr "mine loendi lõppu"
-
-#~ msgid "on end of movie"
-#~ msgstr "filmi lõpus"
-
-#~ msgid "save recording (Select event)"
-#~ msgstr "salvesta (vali saade)"
-
-#~ msgid "save recording (stop after current event)"
-#~ msgstr "salvesta (lõpeta peale praegust saadet)"
-
-#~ msgid "scan done!"
-#~ msgstr "otsing valmis!"
-
-#~ msgid "scan in progress - %d%% done!"
-#~ msgstr "otsing käib - %d%% valmis!"
-
-#~ msgid "select interface"
-#~ msgstr "vali võrguliides"
-
-#~ msgid "select movie"
-#~ msgstr "vali salvestus"
-
-#~ msgid "view recordings..."
-#~ msgstr "vaata salvestusi..."
-
-#~ msgid "wireless networks found!"
-#~ msgstr "juhtmevaba võrku leitud!"
